<resources>
    <string name="a">Navigate home</string>
    <string name="b">Navigate up</string>
    <string name="c">More options</string>
    <string name="d">Done</string>
    <string name="e">See all</string>
    <string name="f">Choose an app</string>
    <string name="g">OFF</string>
    <string name="h">ON</string>
    <string name="i">sans-serif</string>
    <string name="j">sans-serif-medium</string>
    <string name="k">sans-serif-medium</string>
    <string name="l">sans-serif</string>
    <string name="m">sans-serif</string>
    <string name="n">sans-serif</string>
    <string name="o">sans-serif</string>
    <string name="p">sans-serif-light</string>
    <string name="q">sans-serif</string>
    <string name="r">sans-serif</string>
    <string name="s">sans-serif</string>
    <string name="t">sans-serif-medium</string>
    <string name="u">Alt+</string>
    <string name="v">Ctrl+</string>
    <string name="w">delete</string>
    <string name="x">enter</string>
    <string name="y">Function+</string>
    <string name="z">Meta+</string>
    <string name="a0">Shift+</string>
    <string name="a1">space</string>
    <string name="a2">Sym+</string>
    <string name="a3">Menu+</string>
    <string name="a4">Search…</string>
    <string name="a5">Clear query</string>
    <string name="a6">Search query</string>
    <string name="a7">Search</string>
    <string name="a8">Submit query</string>
    <string name="a9">Voice search</string>
    <string name="a_">Share with</string>
    <string name="aa">Share with %s</string>
    <string name="ab">Collapse</string>
    <string name="ac">Card number</string>
    <string name="ad">Expiration date</string>
    <string name="ae">ZIP Code</string>
    <string name="af">ZIP</string>
    <string name="ag">添加账号</string>
    <string name="ah">Add a new debit or credit card to make purchases in this app.</string>
    <string name="ai">Please enter your city</string>
    <string name="aj">Please enter your county</string>
    <string name="ak">Address</string>
    <string name="al">Address line 1</string>
    <string name="am">Address line 1 (optional)</string>
    <string name="an">Address line 2</string>
    <string name="ao">Address line 2 (optional)</string>
    <string name="ap">Address (optional)</string>
    <string name="aq">Apt.</string>
    <string name="ar">Apt. (optional)</string>
    <string name="as">City</string>
    <string name="at">City (optional)</string>
    <string name="au">Country</string>
    <string name="av">County</string>
    <string name="aw">County (optional)</string>
    <string name="ax">Name</string>
    <string name="ay">Name (optional)</string>
    <string name="az">Phone number</string>
    <string name="b0">Phone number (optional)</string>
    <string name="b1">Postal code</string>
    <string name="b2">Postal code (optional)</string>
    <string name="b3">Postcode</string>
    <string name="b4">Postcode (optional)</string>
    <string name="b5">Province</string>
    <string name="b6">Province (optional)</string>
    <string name="b7">State / Province / Region</string>
    <string name="b8">State / Province / Region (optional)</string>
    <string name="b9">State</string>
    <string name="b_">State (optional)</string>
    <string name="ba">ZIP code</string>
    <string name="bb">ZIP code (optional)</string>
    <string name="bc">ZIP/Postal code</string>
    <string name="bd">ZIP / Postal code (optional)</string>
    <string name="be">Please enter your name</string>
    <string name="bf">Please enter your phone number</string>
    <string name="bg">Your postal code is invalid</string>
    <string name="bh">Your postcode is invalid</string>
    <string name="bi">Please enter your province</string>
    <string name="bj">Please enter your State/Province/Region</string>
    <string name="bk">Please enter your address</string>
    <string name="bl">Shipping Address</string>
    <string name="bm">Please enter your state</string>
    <string name="bn">Your ZIP code is invalid.</string>
    <string name="bo">Your ZIP/Postal code is invalid</string>
    <string name="all_game">去全部游戏看看&gt;&gt;</string>
    <string name="bq">Amex</string>
    <string name="br">Apk 文件不存在, 请提供有效的文件路径.</string>
    <string name="bs">App is running in background</string>
    <string name="bt">鸟人助手</string>
    <string name="bu">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bv">首次启动，大约需要1-5分钟，请耐心等待</string>
    <string name="bw">X-Android启动中\n首次启动需要安装相关插件，请耐心等待</string>
    <string name="bx">后台挂机正在启动</string>
    <string name="by">辅助列表</string>
    <string name="bz">停止辅助</string>
    <string name="c0">应用导入</string>
    <string name="c1">虚拟键</string>
    <string name="c2">分辨率设置</string>
    <string name="c3">后台运行</string>
    <string name="c4">关机休息</string>
    <string name="c5">停止辅助</string>
    <string name="c6">辅助列表</string>
    <string name="c7">窗口运行</string>
    <string name="c8">开始下载</string>
    <string name="c9">开始后台挂机</string>
    <string name="c_">首次运行后台挂机需下载相关插件</string>
    <string name="ca">当前为流量模式，是否开始下载？</string>
    <string name="cb">去试试</string>
    <string name="cc">不了，谢谢</string>
    <string name="cd">不再提醒</string>
    <string name="ce">该游戏已支持后台挂机，是否启用后台挂机?</string>
    <string name="cf">后台挂机发现新版本</string>
    <string name="cg">大小：20M</string>
    <string name="ch">版本号：v1.0.1</string>
    <string name="ci">确定</string>
    <string name="cj">兑换</string>
    <string name="ck">请输入兑换卡密</string>
    <string name="cl">卡密错误</string>
    <string name="cm">兑换成功</string>
    <string name="cn">购买鸟人VIP</string>
    <string name="co">修改密码</string>
    <string name="cp">确认修改</string>
    <string name="cq">退出登录</string>
    <string name="cr">登录</string>
    <string name="cs">注册</string>
    <string name="ct">完成注册</string>
    <string name="cu">下一步</string>
    <string name="cv">已购辅助</string>
    <string name="cw">添加云手机</string>
    <string name="cx">移动到</string>
    <string name="cy">创建新分组</string>
    <string name="cz">全选</string>
    <string name="d0">管理分组</string>
    <string name="d1">全部设备(1/3)</string>
    <string name="d2">移动云手机</string>
    <string name="d3">分组管理</string>
    <string name="d4">进入云手机</string>
    <string name="d5">虚拟键</string>
    <string name="d6">标准</string>
    <string name="d7">连接云手机中\n请稍后…</string>
    <string name="d8">重启中,请稍后</string>
    <string name="d9">管理菜单</string>
    <string name="d_">修改名称</string>
    <string name="da">续费</string>
    <string name="db">重启</string>
    <string name="dc">恢复出厂</string>
    <string name="dd">画质</string>
    <string name="de">退出</string>
    <string name="df">刷新</string>
    <string name="dg">续费</string>
    <string name="dh">我的云手机</string>
    <string name="di">取消</string>
    <string name="dj">新建分组</string>
    <string name="dk">请输入分组名称</string>
    <string name="dl">删除分组</string>
    <string name="dm">确定删除分组吗?\n删除后,组内云手机将移动到默认分组</string>
    <string name="dn">重命名分组</string>
    <string name="do">重启后,所有运行进程将被停止,同时释放占用资源,确定重启?</string>
    <string name="e2">20.06.04\n16:30:30</string>
    <string name="e4">VIVO X21A\n当前</string>
    <string name="e5">88888888888888888888</string>
    <string name="e6">2020-09-22 15:22:20</string>
    <string name="e7">对应设备的完整备注内容整备注内容整备注内容整备注内容</string>
    <string name="e8">VIVO X21A</string>
    <string name="e9">皇室战争</string>
    <string name="e_">5/天</string>
    <string name="ed">本辅助纯模拟操作，不修改任何数据 活跃奖励、铭文、喊话超高智能操作，不修改任何数据 活跃奖励、铭文、喊话超高智能操</string>
    <string name="en">1.作者/代理渠道包模式均在主版本上进行切换，不同时维护多套代码，通过打包时加入标记打包时加入标记来实现模来实现模式实现模式实现模式实现模式实现模切作者/代理渠道包模式均在主版本上进行切换，不同时维护多套代码，通过打包时加入标记打包时加入标记来实现模来实现模式实现模式实现模式实现模式实现模切..</string>
    <string name="ff">运行辅助</string>
    <string name="fo">获取金币</string>
    <string name="g0">请选择要运行的游戏</string>
    <string name="g1">运行环境初始化，请耐心等待…</string>
    <string name="g3">验证码已发送至</string>
    <string name="g4">158*******2659</string>
    <string name="g5">重新发送</string>
    <string name="g6">重新发送(60s)</string>
    <string name="g_">验证码错误</string>
    <string name="gc">请输入密码6-16位数字、字母或字符</string>
    <string name="gd">请再次输入密码</string>
    <string name="gf">请输入手机号</string>
    <string name="hd">安装32位鸟人助手</string>
    <string name="he">打开32位鸟人助手</string>
    <string name="hf">该游戏为32位应用\n需配合【32位鸟人助手】才可正常使用</string>
    <string name="hg">启动32位应用异常</string>
    <string name="hh">安装64位鸟人助手</string>
    <string name="hi">打开64位鸟人助手</string>
    <string name="hj">该游戏为64位应用\n需配合【64位鸟人助手】才可正常使用</string>
    <string name="hk">启动64位应用异常</string>
    <string name="hm">重新登录</string>
    <string name="hn">取消</string>
    <string name="ho">连接中</string>
    <string name="hp">退出登录</string>
    <string name="hq">去开启</string>
    <string name="hr">重试</string>
    <string name="hs">确定</string>
    <string name="hu">编辑备注</string>
    <string name="hv">确定</string>
    <string name="hw">下线设备</string>
    <string name="hx">下线\n全部</string>
    <string name="hy">编辑备注</string>
    <string name="hz">设备详情</string>
    <string name="i0">设备IMEI：</string>
    <string name="i1">备注：</string>
    <string name="i2">登录时间：</string>
    <string name="i3">登录机型：</string>
    <string name="i_">立即续费</string>
    <string name="ia">您的【323232】\n将于2021-05-13 14:18到期\n为保证正常挂机,请您及时续费</string>
    <string name="ib">您的云手机即将到期</string>
    <string name="ic">您的鸟人VIP将于2021-05-13 14:18到期为保证正常挂机,请您及时续费</string>
    <string name="id">您的鸟人VIP即将到期</string>
    <string name="im">您的金币即将到期</string>
    <string name="in">获取金币</string>
    <string name="io">重新获取金币后\n将延长所有金币1年有效期</string>
    <string name="ip">当前账号VIP数已占满</string>
    <string name="iq">多开管理</string>
    <string name="ir">是，用金币启动</string>
    <string name="is">今日不再提醒</string>
    <string name="it">金币运行的设备不会占用VIP开数</string>
    <string name="iu">是否继续使用金币启动辅助？</string>
    <string name="iv">确定</string>
    <string name="iw">最多6个字符</string>
    <string name="ix">备注：</string>
    <string name="iy">登录时间：</string>
    <string name="j0">机型 ：</string>
    <string name="j1">下线</string>
    <string name="j2">备注</string>
    <string name="j3">登陆时间</string>
    <string name="j4">机型</string>
    <string name="j5">暂不启动</string>
    <string name="j6">(当前辅助登录设备数已超过2开)</string>
    <string name="j8">您的账号已在另一台设备上登录，您已被踢下线</string>
    <string name="j9">登录设备：VIVO X21</string>
    <string name="j_">登录时间：2019年6月12日 14:20:05</string>
    <string name="jc">详情</string>
    <string name="jd">下线</string>
    <string name="je">已到达或超出VIP开数上限，需下线设备后才可使用VIP挂机</string>
    <string name="jf">暂无挂机中金币设备</string>
    <string name="jg">金币设备（20）</string>
    <string name="jh">不占用VIP开数</string>
    <string name="ji">VIP设备（20）</string>
    <string name="jj">暂不登录</string>
    <string name="jk">当前账号VIP登录开数上限：20</string>
    <string name="jl">已登陆设备数:20</string>
    <string name="jm">执行该操作后，所有VIP设备上的辅助将在10分钟内全部下线，确定执行？</string>
    <string name="jn">下线全部设备</string>
    <string name="jo">授权</string>
    <string name="jp">鸟人助手需要获取启动64位插件权限</string>
    <string name="jq">64位插件授权</string>
    <string name="jr">我已授权</string>
    <string name="js">【鸟人助手抢红包神器】的【通知使用权限】后才可正常抢红包</string>
    <string name="jt">安卓7及以上系统需要开启</string>
    <string name="k0">暂不升级</string>
    <string name="k1">下载升级（80M）</string>
    <string name="k2">不再提醒</string>
    <string name="k3">如无需使用微信登录游戏可点击暂不升级</string>
    <string name="k4">免Root模式组件需要升级</string>
    <string name="k6">安装32位微信</string>
    <string name="k7">系统检测到当前安装的是64位微信，需【安装32位微信】后才可正常使用微信登录游戏！</string>
    <string name="k8">查看教程安装64位插件</string>
    <string name="k9">系统检测到当前启动的游戏或微信为64位，需要安装【64位插件】并授予【自启动】权限后才可正常启动游戏或使用微信登录游戏</string>
    <string name="k_">启动64位应用异常</string>
    <string name="ks">确定</string>
    <string name="ld">打赏</string>
    <string name="le">辅助说明</string>
    <string name="lh">6000次打赏</string>
    <string name="li">19.03.05</string>
    <string name="lj">游戏工具</string>
    <string name="ll">续费VIP</string>
    <string name="lp">您的辅助已到期</string>
    <string name="lq">作者寄语</string>
    <string name="lr">这个作者很懒，什么也没留下</string>
</resources>