<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" style="@style/pv">
    <RelativeLayout style="@style/sm">
        <ImageView style="@style/sp"/>
        <TextView android:text="@string/e9" style="@style/ss"/>
    </RelativeLayout>
    <RelativeLayout style="@style/a3d">
        <ImageView android:src="@drawable/b5" style="@style/a37"/>
        <LinearLayout style="@style/a38">
            <TextView android:text="@string/e9" style="@style/a3a"/>
            <TextView android:text="@string/e_" style="@style/a35"/>
            <LinearLayout style="@style/a3g">
                <TextView android:text="@string/lj" style="@style/a3k"/>
                <TextView android:text="@string/li" style="@style/a3n"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:text="@string/fo" style="@style/a3e"/>
    </RelativeLayout>
    <View style="@style/pw"/>
    <LinearLayout style="@style/a2v">
        <TextView android:text="@string/le" style="@style/a2y"/>
        <TextView android:text="@string/ed" style="@style/a2x"/>
        <TextView android:text="@string/ed" style="@style/a2x"/>
        <RelativeLayout style="@style/a42">
            <TextView android:text="@string/lq" style="@style/a43"/>
            <TextView android:text="@string/lh" style="@style/a3l"/>
            <TextView android:text="@string/ld" style="@style/a2u"/>
        </RelativeLayout>
        <TextView android:text="@string/lr" style="@style/a2x"/>
    </LinearLayout>
    <TextView android:text="@string/ff" style="@style/a2w"/>
</LinearLayout>
